Bug 282358 - user is typing wrong name
Summary: user is typing wrong name
Status: RESOLVED FIXED
Alias: None
Product: telepathy
Classification: Unmaintained
Component: text-ui (other bugs)
Version First Reported In: git-latest
Platform: openSUSE Linux
: NOR normal
Target Milestone: 0.4.0
Assignee: Telepathy Bugs
URL:
Keywords:
Depends on:
Blocks: 282193
  Show dependency treegraph
 
Reported: 2011-09-19 15:29 UTC by Alin M Elena
Modified: 2012-07-06 12:47 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Alin M Elena 2011-09-19 15:29:37 UTC
Version:           git-latest (using Devel) 
OS:                Linux

When more that one user chat are in the chat window... the title window shows

user is typing... using the user from the active tab, rather than the user that types.

Reproducible: Didn't try

Steps to Reproduce:
...

Actual Results:  
...

Expected Results:  
...

OS: Linux (x86_64) release 3.1.0-rc5-2-desktop
Compiler: gcc
Comment 1 Alin M Elena 2011-09-19 15:55:18 UTC
probably the correct behaviour would be this user is typing message to apply only if there is only on chat open in the window.

Alin
Comment 2 David Edmundson 2011-09-19 17:37:56 UTC
Or only put up "user is typing" if it's occurring in the active chat.

Marking as new, blocking 0.2
Comment 3 Martin Klapetek 2011-09-20 09:49:05 UTC
The original idea was to simply see that someone is typing (for example in your taskbar). It doesn't make much sense to include the user name in the string IMHO. Also, what would happen if two users are typing at the same time? (Actually I'm not sure what happens now, but still, you'd had title like "User 1 is typing... User2 is typing... | User1" so I don't know)
Comment 4 Martin Klapetek 2011-10-27 11:38:46 UTC
Git commit ebd98db6cf3d5e288fecc4950b57cb33c82a6260 by Martin Klapetek.
Committed on 27/10/2011 at 13:36.
Pushed by mklapetek into branch 'master'.

Better user-is-typing signaling, now it correctly appends the string "Typing..." to the window title (ie. it only appends it when the current opened tab has a currently typing user)

Reviewed-by: Francesco Nwokeka
REVIEW: 102977
BUG: 282358

M  +6    -3    app/chat-window.cpp
M  +1    -1    app/chat-window.h
M  +5    -0    lib/chat-widget.cpp
M  +3    -0    lib/chat-widget.h

http://commits.kde.org/telepathy-text-ui/ebd98db6cf3d5e288fecc4950b57cb33c82a6260