Better user-is-typing signaling, now it correctly appends the string "Typing..." to the window title (ie. it only appends it when the current opened tab has a currently typing user)

Reviewed-by: Francesco Nwokeka
REVIEW: 102977
BUG: 282358